# Web-Server

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test  README.md  config.json  config_test.json  http_client.cpp  main.cpp
docs/: Doxyfile
keys/: server.cert  server.key
src/: CMakeLists.txt  Socket.h  client_request.cpp  client_request.h  configuration.h  connection.cpp  connection.h  constants.h  http_message.cpp  http_message.h  http_message_parser.cpp  http_message_parser.h  http_request.cpp  http_request.h  http_request_carrier.cpp  http_request_carrier.h  http_request_envelope.h  http_request_parser.cpp  http_request_parser.h  http_request_reader.cpp  http_request_reader.h  http_response.cpp  http_response.h  http_response_envelope.h  http_response_parser.cpp  http_response_parser.h  identifiable.h  route_resolver.cpp  route_resolver.h  socket.cpp  state.cpp  state.h  task_scheduler.cpp  task_scheduler.h  url.cpp  url.h  utils.cpp  utils.h  web_socket_message_generator.cpp  web_socket_message_generator.h  (+2 more)
src/actions/: action.h  add_client_connection_action.h  add_client_request_action.h  create_server_socket_action.h  load_configuration_action.h  modify_client_request_action.h  new_http_request_action.h
src/applications/: docker_interface_app.cpp  docker_interface_app.h  http_client_app.cpp  http_client_app.h
src/controllers/: controller.h  direct_controller.cpp  direct_controller.h
src/objects/: access_profile.cpp  access_profile.h  authorization.h  http_message.cpp  http_message.h  route.cpp  route.h  session.h  session_record.h  user_account.h  web_socket_message.h  web_socket_message_frame.h  web_socket_message_header.h
src/receivers/: log_action_receiver.cpp  log_action_receiver.h  receiver.h  state_action_receiver.cpp  state_action_receiver.h
src/tasks/: authorize_user_task.cpp  authorize_user_task.h  finalize_client_requests_task.cpp  finalize_client_requests_task.h  initialize_client_requests_task.cpp  initialize_client_requests_task.h  initialize_http_request_connections_task.cpp  initialize_http_request_connections_task.h  initialize_server_task.cpp  initialize_server_task.h  initialize_tls_server_socket_task.cpp  initialize_tls_server_socket_task.h  load_configuration_task.cpp  load_configuration_task.h  load_requested_file_task.cpp  load_requested_file_task.h  load_routing_data_task.cpp  load_routing_data_task.h  log_events_task.cpp  log_events_task.h  process_http_requests_task.cpp  process_http_requests_task.h  prune_connections_task.cpp  prune_connections_task.h  receive_http_responses_task.cpp  receive_http_responses_task.h  receive_requests_task.cpp  receive_requests_task.h  reception_task.cpp  reception_task.h  recieve_web_socket_messages_task.cpp  recieve_web_socket_messages_task.h  send_http_requests_task.cpp  send_http_requests_task.h  send_responses_task.cpp  send_responses_task.h  send_web_socket_messages_task.cpp  send_web_socket_messages_task.h  task.h  tls_reception_task.cpp  (+3 more)
tests/unit_tests/: CMakeLists.txt  copy_tests.cpp  http_message_generation_tests.cpp  http_message_parser_error_tests.cpp  http_message_parser_tests.cpp  http_request_parser_test.cpp  http_request_test.cpp  http_request_tests.cpp  http_response_parser_tests.cpp  http_response_progressive_parser_tests.cpp  http_response_test.cpp  http_server_tests.cpp  load_routing_data_task_tests.cpp  parse_accept_header_tests.cpp  route_applies_tests.cpp  route_resolver_tests.cpp  route_sorting_tests.cpp  tls_http_server_tests.cpp  url_tests.cpp  websocket_tests.cpp
web_test/: big_file.txt  hello.html  index.html  style.css  test.html
